imports/ui/components/commentary/commentary.import.less
/* ... */
.comment-group-meta {
  text-align: right;
  padding: 40px 0;
  display: inline-block;
  vertical-align: top;
  width: 10%;

  .comment-group-meta-inner {
    position: absolute;
    top: 115px;
    left: 3%;
  }

  .comment-group-meta-inner-fixed {
    position: fixed;
    top: 70px;
    left: 6%;
		z-index:1;
  }

  .comment-group-meta-inner-bottom {
    position: absolute;
    bottom: 173px;
    left: 6%;
  }

  .comment-group-ref-above {
    cursor: default;
    text-transform: uppercase;
    font-weight: bold;
    color: @text-secondary;
    padding: 30px 0px 5px 0;
    margin: 0 0px 0 0;
    font-family: @font-label;
    font-size: 16px;
    text-align: right;
    float:right;
    clear:both;
    display: block;

  }

  h2.comment-group-ref-below {
    cursor: default;
    font-family: @font-title;
    font-size: 46px;
    font-weight: bold;
    color: #424242;
    margin: 0;
    padding: 10px 0px 20px;
    display: inline-block;
    vertical-align: top;
    max-width: 65px;
    text-align: right;
    float:right;
    clear:both;
    display: block;
		width:auto;

    span {
      font-family: @font-title;
      font-size: 46px;
      font-weight: bold;

    }

    &.fixed {
      top: 50px;
      left: 112px;

    }

  }

  .comment-group-ref-lemma {
    text-align: right;
    padding: 0px 0;
    width: 60%;
    margin: 0 auto;
    display: inline-block;
    vertical-align: top;
    display: none;

    p {
      padding: 5px;
      margin: 0;
      font-size: 18px;
      color: @text-secondary;

    }

  }

  .comment-group-commenters {
    padding: 5px 0px 10px 0;

    .comment-author {
      clear: both;
      position: relative;

      &:hover {
        .comment-author-name {
          // opacity: 1;
        }
      }
    }

    .comment-author-name {
      color: @text-secondary;
      font-size: 12px;
      top: 15px;
      right: 60px;
      text-transform: uppercase;
      position: absolute;
      opacity: 0;
			line-height:1.4em;
      .transition(all 300ms ease-out);

    }

    .comment-author-image-wrap {
      margin: 5px 0;
      display: block;
      float: right;
    }

  }

}


.comments {
  display: inline-block;
  vertical-align: top;
  width: 100%;
  text-align: center;
  margin: 0 auto;

}

.comment-outer {
  margin: 0 auto;
  display: inline-block;
  vertical-align: top;
  width: 100%;
  text-align: center;
  position: relative;
  .transition(all 300ms ease-out);

}

.comment-lemma-comment-outer {

}

.comment {
  display: inline-block;
  vertical-align: top;
  padding: 0;
  margin: 20px 0 20px 10%;
  background: @light;
  width: 74%;
  text-align: left;
  .transition(all 300ms ease-out);
  position: relative;

  &:hover {

    .comment-revisions {
      opacity: 1;
    }

  }

  &.comment--title-fixed {
    .comment-fixed-title-wrap {
      position: fixed;
      top: 70px;
      opacity: 1;
      height: 63px;

    }

  }

  h1 {
    margin: 0;
    padding: 10px 0;
    font-family: @font-label;
    font-size: 28px;
    color: @text-reading;

  }

  .comment-upper, .comment-lower {
    display: block;
    width: 90%;
    margin: 0 auto;
		clear:both;
  }

  .comment-upper {
    padding-top: 50px;
  }
  .comment-lower {
    padding-bottom: 40px;
  }

  .comment-upper-left, .comment-upper-right {
    display: inline-block;
    vertical-align: top;
  }

  .comment-upper-right {
    text-align: right;
    float: right;
  }

  .comment-revisions {
    background: #fafafa;
    border-top: 1px solid #ddd;
    padding: 0;
    opacity: 0;
    .transition(all 300ms ease-out);

    .revision {
      display: inline-block;
      margin-right: -4px;
      border-right: 1px solid #ddd !important;
      border-bottom: 1px solid #ddd !important;
			border-radius: 0 !important;

      span {
        padding: 0px 20px;
        display: block;
        font-family: @font-light;
        font-size: 12px !important;
        text-transform: uppercase;
        color: #999;
				font-weight:300 !important;

      }

      &.selected-revision {
	      border-right: 1px solid @primary !important;
	      border-bottom: 1px solid @primary !important;

        span {
          background: @primary;
          color: @light;

        }
      }

    }

  }

  .revision-diff {

    table {
      padding: 20px 0 0;
    }
  }
  .revision-diff-title {
    font-size: 18px;

  }

}

.edition-tab {
  display: inline-block;
  margin: 5px;
  box-shadow: none !important;
  border-radius: 2px;

  &.selected-edition-tab {
    background: @primary !important;
    margin: 3px;
    color: @light;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) !important;
    border-radius: 2px;

    button, div {
      background: @primary !important;

    }

    span {
      color: @light !important;

    }

    &:hover {
      background: @primary-dark-2 !important;
      button, div {
        background: @primary-dark-2 !important;

      }

    }

  }

  button {
    padding: 5px 10px;
    max-width: none;
    text-overflow: ellipsis;

    span {
      //font-family:@font-label;
      font-size: 12px !important;
    }

  }

}

.edition-multiline {
  margin-left: -3px;
  background-color: @md-primary-300 !important;
  min-width: 40px !important;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2) !important;
  button, div {
    background: @md-primary-300 !important;
  }
  span {
    color: @light !important;
  }
}
/* ... */

